@@ -1,3 +1,10 @@
+Thu Oct  1 12:43:47 UTC 2009  Marcel Smit  <msmit@remedy.nl>
+
+        * tests/Bug_2593_Regression/run_test.pl:
+        * tests/Bug_2734_Regression/run_test.pl:
+        * tests/Bug_2735_Regression/run_test.pl:
+          Resolved some fuzz errors.
+
 Thu Oct  1 08:21:32 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tests/Bug_2494_Regression/run_test.pl
